--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mamitas_pizza",
+  "name": "mamitas_pizza_app",
   "version": "0.0.1",
-  "description": "app for client in pizzas app",
+  "description": "App for view products (pizzas) in mamitas pizza.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
